refactor: レスポンススキーマの緯度経度をfloat型に変更
